--- a/hair_salon_course.html
+++ b/hair_salon_course.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>美髮經營遊戲化課程</title>
+    <title>美髮經營課程</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700;800&display=swap');
@@ -716,3 +716,4 @@
     </script>
 </body>
 </html>
+
