--- a/hair_salon_course.html
+++ b/hair_salon_course.html
@@ -377,15 +377,27 @@
         import { getAuth, signInAnonymously, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-auth.js";
         import { getFirestore, doc, getDoc, setDoc, setLogLevel } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-firestore.js";
 
-        // Your Firebase project configuration.
-        const firebaseConfig = {
-            apiKey: "“AIzaSyCOhBN9TH3UJSOSx5XVyQ08f_2RUckvXYU” ",
-            authDomain: "holyhairsalon-f73bf.firebaseapp.com",
-            projectId: "YOUR_PROJECT_ID",
-            storageBucket: "YOUR_STORAGE_BUCKET",
-            messagingSenderId: "YOUR_MESSAGING_SENDER_ID",
-            appId: "YOUR_APP_ID",
-            measurementId: "YOUR_MEASUREMENT_ID"
+   // Import the functions you need from the SDKs you need
+import { initializeApp } from "firebase/app";
+import { getAnalytics } from "firebase/analytics";
+// TODO: Add SDKs for Firebase products that you want to use
+// https://firebase.google.com/docs/web/setup#available-libraries
+
+// Your web app's Firebase configuration
+// For Firebase JS SDK v7.20.0 and later, measurementId is optional
+const firebaseConfig = {
+  apiKey: "AIzaSyCOhBN9TH3UJSOSx5XVyQ08f_2RUckvXYU",
+  authDomain: "holyhairsalon-f73bf.firebaseapp.com",
+  projectId: "holyhairsalon-f73bf",
+  storageBucket: "holyhairsalon-f73bf.firebasestorage.app",
+  messagingSenderId: "960169055224",
+  appId: "1:960169055224:web:4f8a45c0d3e31a93bf3c0d",
+  measurementId: "G-BC8J4V9NLP"
+};
+
+// Initialize Firebase
+const app = initializeApp(firebaseConfig);
+const analytics = getAnalytics(app);
         };
         
         let db, auth;
@@ -716,4 +728,3 @@
     </script>
 </body>
 </html>
-
