--- a/index.html
+++ b/index.html
@@ -32,36 +32,117 @@
     </script>
 
     <style>
-        :root { --primary-purple: #8a2be2; --soft-purple: #b388ff; --deep-purple: #4b0082; --glass-bg: rgba(255, 255, 255, 0.95); }
-        body { font-family: 'PingFang TC', sans-serif; background: #f4f7f6; margin: 0; padding-top: 70px; }
+      :root {
+    --primary: #8e44ad;
+    --accent: #ff9ff3;
+    --bg-gradient: linear-gradient(135deg, #fdfcfb 0%, #e2d1c3 100%);
+    --card-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.07);
+}
 
-        nav { position: fixed; top: 0; width: 100%; height: 60px; background: white; display: flex; justify-content: space-between; align-items: center; padding: 0 20px; box-sizing: border-box; z-index: 1000; box-shadow: 0 2px 5px rgba(0,0,0,0.1); }
-        .nav-right { display: flex; gap: 10px; align-items: center; }
-        .nav-btn { cursor: pointer; font-size: 13px; font-weight: bold; padding: 6px 12px; border-radius: 20px; border: 1px solid var(--primary-purple); color: var(--primary-purple); transition: 0.3s; }
-        .nav-btn:hover { background: var(--primary-purple); color: white; }
+body {
+    font-family: 'PingFang TC', 'Microsoft JhengHei', sans-serif;
+    background: var(--bg-gradient);
+    color: #444;
+    margin: 0; padding-top: 80px;
+}
 
-        .container { max-width: 800px; margin: 20px auto; background: white; border-radius: 15px; padding: 25px; box-shadow: 0 5px 20px rgba(0,0,0,0.1); }
-        
-        .module-card { background: white; border-radius: 12px; padding: 15px; margin-bottom: 12px; border-left: 6px solid #ddd; cursor: pointer; transition: 0.2s; box-shadow: 0 2px 5px rgba(0,0,0,0.05); }
-        .module-card.unlocked { border-left-color: var(--soft-purple); }
-        .module-card.completed { border-left-color: #28a745; background: #fafffa; }
-        .progress-container { width: 100%; background: #eee; border-radius: 10px; height: 5px; margin-top: 8px; overflow: hidden; }
-        .progress-bar { height: 100%; background: var(--soft-purple); width: 0; transition: 0.5s; }
-        .completed .progress-bar { background: #28a745; width: 100%; }
+/* 導覽列：毛玻璃質感 */
+nav {
+    position: fixed; top: 0; width: 100%; height: 65px;
+    background: rgba(255, 255, 255, 0.7);
+    backdrop-filter: blur(15px);
+    -webkit-backdrop-filter: blur(15px);
+    display: flex; justify-content: space-between; align-items: center;
+    padding: 0 30px; box-sizing: border-box; z-index: 1000;
+    border-bottom: 1px solid rgba(255, 255, 255, 0.3);
+}
 
-        .modal { display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.6); z-index: 2000; justify-content: center; align-items: center; }
-        .modal-content { background: white; padding: 25px; border-radius: 15px; width: 90%; max-width: 400px; }
-        input, textarea { width: 100%; padding: 12px; margin: 8px 0; border: 1px solid #ddd; border-radius: 8px; box-sizing: border-box; }
-        
-        .btn-save { width: 100%; background: var(--primary-purple); color: white; border: none; padding: 12px; border-radius: 8px; font-weight: bold; cursor: pointer; }
-        .btn-logout { width: 100%; background: transparent; color: #ff4444; border: 1px solid #ff4444; padding: 10px; border-radius: 8px; margin-top: 15px; cursor: pointer; }
+/* 導覽按鈕改進 */
+.nav-btn {
+    background: white;
+    border: 1.5px solid var(--primary);
+    color: var(--primary);
+    padding: 8px 18px;
+    border-radius: 50px;
+    font-size: 14px;
+    font-weight: 600;
+    transition: all 0.3s;
+}
+.nav-btn:hover {
+    background: var(--primary);
+    color: white;
+    box-shadow: 0 4px 12px rgba(142, 68, 173, 0.3);
+}
 
-        .admin-drawer { background: #fdfdfd; border: 1px solid #eee; border-radius: 10px; margin-bottom: 8px; overflow: hidden; }
-        .drawer-header { padding: 12px; cursor: pointer; display: flex; justify-content: space-between; background: #f9f9f9; font-size: 14px; }
-        .drawer-content { padding: 15px; display: none; border-top: 1px solid #eee; font-size: 13px; background: white; }
+/* 容器：更有呼吸感 */
+.container {
+    max-width: 850px;
+    margin: 20px auto;
+    background: rgba(255, 255, 255, 0.85);
+    border-radius: 24px;
+    padding: 35px;
+    box-shadow: var(--card-shadow);
+}
 
-        .video-wrapper { position: relative; padding-bottom: 56.25%; height: 0; border-radius: 10px; overflow: hidden; background: #000; }
-        .video-wrapper iframe { position: absolute; top: 0; left: 0; width: 100%; height: 100%; border: none; }
+/* 模組卡片優化 */
+.module-card {
+    background: white;
+    border-radius: 18px;
+    padding: 20px;
+    margin-bottom: 20px;
+    border: 1px solid rgba(0,0,0,0.03);
+    transition: transform 0.2s, box-shadow 0.2s;
+    position: relative;
+    overflow: hidden;
+}
+.module-card:hover {
+    transform: translateY(-3px);
+    box-shadow: 0 10px 20px rgba(0,0,0,0.05);
+}
+
+/* --- 進度條：從粗糙變精緻的核心 --- */
+.progress-container {
+    width: 100%;
+    background: #f0f0f0;
+    border-radius: 20px;
+    height: 10px; /* 稍微加粗一點點更有質感 */
+    margin-top: 15px;
+    overflow: hidden;
+    border: 1px solid rgba(0,0,0,0.02);
+}
+
+.progress-bar {
+    height: 100%;
+    background: linear-gradient(90deg, #9b59b6, #ff9ff3); /* 漸層色 */
+    border-radius: 20px;
+    width: 0%;
+    transition: width 0.8s cubic-bezier(0.17, 0.67, 0.83, 0.67);
+    position: relative;
+}
+
+/* 已完成的進度條加入發光感 */
+.completed .progress-bar {
+    background: linear-gradient(90deg, #27ae60, #2ecc71);
+    box-shadow: 0 0 10px rgba(46, 204, 113, 0.4);
+}
+
+/* 模組狀態圖示 */
+.status-badge {
+    font-size: 12px;
+    padding: 4px 10px;
+    border-radius: 50px;
+    float: right;
+    background: #eee;
+}
+.completed .status-badge { background: #eafff0; color: #27ae60; }
+
+/* 按鈕質感提升 */
+button {
+    cursor: pointer;
+    border-radius: 50px;
+    transition: all 0.2s;
+}
+button:active { transform: scale(0.96); }
     </style>
 </head>
 <body>
@@ -315,3 +396,4 @@
 
 </body>
 </html>
+
