--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
 </div>
 
 <div id="authModal" class="modal"><div class="modal-content"><h3>會員登入</h3><input type="email" id="emailInput" placeholder="Email"><input type="password" id="passInput" placeholder="Password"><button onclick="emailLogin()" class="action-btn">確認</button></div></div>
-<div id="adminAuthModal" class="modal"><div class="modal-content"><h3>導師驗證</h3><input type="password" id="adminPassword" placeholder="輸入密碼"><button onclick="checkAdminPassword()" class="action-btn">驗證</button></div></div>
+<div id="adminAuthModal" class="modal"><div class="modal-content"><h3>導師驗證</h3><input type="password" id="0000" placeholder="輸入密碼"><button onclick="checkAdminPassword()" class="action-btn">驗證</button></div></div>
 
 <script type="module">
     import { signInWithEmailAndPassword, createUserWithEmailAndPassword, signOut, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
@@ -251,3 +251,4 @@
 </script>
 </body>
 </html>
+
