--- a/index.html
+++ b/index.html
@@ -263,3 +263,84 @@
     };
 
     window.showDashboard = () => { document.getElementById('modulePage').style.display = 'none'; document.getElementById('dashboard').style.display = 'block'; };
+    window.showCertificate = () => {
+        document.getElementById('certUnlockArea').style.display = 'none';
+        document.getElementById('certStudentName').textContent = userData.profile.name || '親愛的創業夥伴';
+        document.getElementById('certDate').textContent = `發證日期：${new Date().toLocaleDateString()}`;
+        document.getElementById('certificateArea').style.display = 'block';
+        window.scrollTo(0, document.body.scrollHeight);
+    };
+
+    window.render = () => {
+        const list = document.getElementById('modulesList');
+        list.innerHTML = '';
+        let allDone = true;
+        moduleTitles.forEach((t, i) => {
+            const m = userData.progress[i];
+            if (!m.done) allDone = false;
+            const card = document.createElement('div');
+            card.className = `module-card`;
+            card.style.opacity = m.unlocked ? '1' : '0.5';
+            card.innerHTML = `<strong>${t} ${m.done ? '✅' : ''}</strong><div class="progress-container"><div class="progress-bar" style="width: ${m.done?100:(m.unlocked?10:0)}%"></div></div>`;
+            if (m.unlocked) card.onclick = () => openMod(i);
+            list.appendChild(card);
+        });
+        if (allDone) document.getElementById('certUnlockArea').style.display = 'block';
+    };
+
+    async function loadAdminData() {
+        const list = document.getElementById('adminUserList');
+        const s = await get(ref(window.db, 'members'));
+        if(!s.exists()) return;
+        const data = s.val(); list.innerHTML = '';
+        Object.keys(data).forEach(uid => {
+            const u = data[uid];
+            const doneCount = u.progress ? u.progress.filter(p => p.done).length : 0;
+            const progressPercent = Math.round((doneCount / 14) * 100);
+            const card = document.createElement('div');
+            card.style = "background:#f9f9f9; padding:20px; border-radius:15px; margin-bottom:20px; border-left:5px solid var(--primary);";
+            let progressHtml = '';
+            if(u.progress) u.progress.forEach((p, idx) => { if(p.done) progressHtml += `<div style="font-size:13px; background:white; padding:8px; border-radius:8px; margin-top:5px; border:1px solid #eee;"><strong>${moduleTitles[idx]}:</strong><br>${p.comment}</div>`; });
+            card.innerHTML = `
+                <div style="display:flex; justify-content:space-between; align-items:center;">
+                    <strong>${u.profile?.name || '未填'}</strong>
+                    <span style="font-size:12px; color:var(--primary); font-weight:bold;">${progressPercent}%</span>
+                </div>
+                <div class="admin-progress-bg"><div class="admin-progress-fill" style="width: ${progressPercent}%;"></div></div>
+                <div style="font-size:13px; color:#666; margin-top:10px;">聯絡: ${u.profile?.contact || '無'}</div>
+                <hr style="border:0; border-top:1px solid #eee; margin:10px 0;">
+                <div style="font-weight:bold; font-size:13px;">📝 回覆：</div>
+                ${progressHtml || '無回覆'}
+            `;
+            list.appendChild(card);
+        });
+    }
+
+    window.submitProgress = async () => {
+        if(document.getElementById('userComment').value.length < 50) return alert("心得需滿 50 字才能晉級喔！");
+        userData.progress[currentIdx].done = true;
+        userData.progress[currentIdx].comment = document.getElementById('userComment').value;
+        if(currentIdx < 13) userData.progress[currentIdx+1].unlocked = true;
+        userData.points += 50;
+        await syncToCloud(); render(); showDashboard();
+    };
+
+    window.syncToCloud = async () => { if(window.auth.currentUser) await set(ref(window.db, 'members/' + window.auth.currentUser.uid), userData); };
+    async function syncFromCloud(uid) { const s = await get(ref(window.db, 'members/' + uid)); if(s.exists()) userData = {...userData, ...s.val()}; }
+    window.saveProfile = async () => { userData.profile = { name: document.getElementById('profName').value, contact: document.getElementById('profContact').value, bio: document.getElementById('profBio').value }; await syncToCloud(); updateCheerMessage(); closeModal('profileModal'); render(); };
+    window.emailLogin = async () => { 
+        try { 
+            await signInWithEmailAndPassword(window.auth, document.getElementById('emailInput').value, document.getElementById('passInput').value); 
+            closeModal('authModal'); 
+        } catch { 
+            await createUserWithEmailAndPassword(window.auth, document.getElementById('emailInput').value, document.getElementById('passInput').value); 
+            closeModal('authModal'); 
+        } 
+    };
+    window.logout = () => { signOut(window.auth); location.reload(); };
+    window.openModal = (id) => document.getElementById(id).style.display = 'flex';
+    window.closeModal = (id) => document.getElementById(id).style.display = 'none';
+    window.closeAdmin = () => { document.getElementById('adminSection').style.display = 'none'; document.getElementById('mainDashboard').style.display = 'block'; };
+</script>
+</body>
+</html>
