--- a/index.html
+++ b/index.html
@@ -171,24 +171,34 @@
         <input id="emailInput" placeholder="Email">
         <input id="passInput" type="password" placeholder="Password">
         
-        <div style="text-align: left; margin-top: 15px;">
-            <label style="font-size: 14px; font-weight: bold; color: var(--primary);">2026 學員服務與個資保護條款</label>
+<div style="text-align: left; margin-top: 15px;">
+            <label style="font-size: 14px; font-weight: bold; color: var(--primary);">2026 隱私權政策與個資保護告知書</label>
             <div class="agreement-box">
-                為確保 活力美髮學堂（以下簡稱「本平台」）之種子學員（以下簡稱「學員」）權益，並建立嚴謹之數位管理規範，請於啟用 「學堂隨身助理」 及 「導師專屬平台」 前，詳閱以下條款：<br><br>
-                一、 帳號安全與權限規範<br>
-                1. 專屬權限： 本平台核發之登入帳號僅限學員本人使用，嚴禁轉借、租賃或授權他人使用。<br>
-                2. 安全義務： 學員有義務妥善保管密碼。凡經由正確帳號密碼登入後之所有行為（如核銷、扣款），均視為學員本人之操作。<br><br>
-                二、 會員個資與數據處理<br>
-                1. 個資授權： 學員透過 App 蒐集之顧客名單、聯絡方式，其所有權歸屬學員經營之沙龍所有。本平台僅提供雲端儲存與運算技術支持。<br>
-                2. 隱私保護： 本平台承諾採用 AES 數據加密技術 保護資料庫，未經學員授權，本平台不得將學員之客戶數據提供給任何第三方進行商業用途。<br><br>
-                三、 金流、儲值與點數管理（核心重要！）<br>
-                1. 功能定義： 本 App 內顯示之「錢包餘額」與「儲值功能」，目前僅供學員內部管理使用，用於記錄沙龍與其顧客間之預收帳務，本平台不代收、不經手任何實際之法定貨幣。<br>
-                2. 對帳責任： 學員應定期使用「總部對帳系統」進行帳務複核。若因學員端操作錯誤（如溢扣、漏記）導致之帳務紛爭，應由學員與其顧客自行協商解決。<br><br>
-                四、 系統免責聲明<br>
-                1. 開發階段說明： 學員理解本系統目前處於「種子測試階段」。本平台將盡力維護系統穩定，但若因電信業者故障、不可抗力之天災或黑客攻擊導致服務暫時中斷，本平台不負損害賠償責任。<br>
-                2. 更新義務： 本平台保有隨時修改、優化 App 功能之權利，學員應配合更新至最新版本以確保數據安全。<br><br>
-                五、 爭議解決<br>
-                本協議之解釋與適用，以 [台灣/高雄] 地方法院為第一審管轄法院。
+                <strong>活力美髮學堂（HolyHair）</strong><br>
+                歡迎使用「美髮創業雲課程」（以下簡稱「本平台」）。為了保障學員（以下簡稱「您」）的隱私權及個資安全，特此說明：<br><br>
+                
+                <h4>一、 個資蒐集之目的與類別</h4>
+                1. 目的：學員身分驗證、課程進度追蹤、證書核發、雲端技術支援及安全性檢測。<br>
+                2. 類別：姓名、Email、電話、沙龍名稱、創業目標、登入紀錄、IP 位址及經營數據（由您自行輸入之客戶名單，系統僅代為加密儲存）。<br><br>
+
+                <h4>二、 利用期間、地區與對象</h4>
+                1. 期間：自註冊起至要求註銷帳號或服務終止止。<br>
+                2. 地區：中華民國境內及雲端伺服器所在地。<br>
+                3. 對象：僅限本平台管理團隊。我們承諾絕不將個資或數據出售給第三方。<br><br>
+
+                <h4>三、 數據所有權與 AES 加密</h4>
+                1. 數據歸屬：您透過 App 管理之客戶、預約及消費紀錄，所有權完全歸屬於學員本人。<br>
+                2. 加密保護：資料庫採用 AES 高階加密技術，未經授權工作人員亦無法讀取您的客戶數據。<br><br>
+
+                <h4>四、 帳務紀錄金流免責聲明</h4>
+                1. 數位工具性質：系統內「錢包」或「儲值」功能僅為電子記事簿性質。<br>
+                2. 金流聲明：本平台不經手、不代收實際法定貨幣，若有輸入錯誤導致之紛爭，由學員自行處理。<br><br>
+
+                <h4>五、 種子測試階段說明</h4>
+                您同意本平台目前處於「種子測試階段」。若因不可抗力或攻擊導致服務暫中斷，我們將協助恢復資料，但不負損害賠償責任。<br><br>
+
+                <h4>六、 學員權利</h4>
+                您可隨時聯繫本平台行使查詢、更正、要求停止蒐集或刪除帳號之權利。
             </div>
             <div class="checkbox-container">
                 <input type="checkbox" id="agreeCheck" onchange="toggleAuthBtn()">
@@ -344,3 +354,4 @@
 </script>
 </body>
 </html>
+
